--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "One Second",
+  "dependencies": {
+    "@fastify/static": "^6.5.0",
+    "@fastify/view": "^7.1.1",
+    "fastify": "^4.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "license": "AGPL-3.0-or-later"
 }
