--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastify": "^4.9.2"
   },
   "devDependencies": {
+    "eslint": "^8.26.0",
     "nodemon": "^2.0.20"
   },
   "license": "AGPL-3.0-or-later"
